[style]: Adjust button text color to fix contrast on the hero cta

--- a/app/_components/_sections/(landingPage)/hero/hero.module.css
+++ b/app/_components/_sections/(landingPage)/hero/hero.module.css
@@ -34,7 +34,7 @@
   @apply mt-8 flex flex-col sm:flex-row gap-4;
 }
 .button {
-  @apply px-6 py-3 rounded-lg bg-primary text-black  shadow-lg hover:bg-brown font-medium transition-all min-h-12 min-w-40;
+  @apply px-6 py-3 rounded-lg bg-primary text-white  shadow-lg hover:bg-brown font-medium transition-all min-h-12 min-w-40;
 }
 .outlineButton {
   @apply px-6 py-3 rounded-lg border border-white text-white hover:bg-black font-medium transition-all min-h-12 min-w-40;
